k8s/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack-api-ingress
  namespace: localstack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: localstack-api.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localstack
                port:
                  number: 4566
